<resources>
    <string name="app_name">TrainHockey</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="CreateAccount">Create Account</string>
    <string name="Password">Password</string>
    <string name="LastName">Last Name</string>
    <string name="FirstName">First Name</string>
    <string name="already_have_an_account_log_in">Already have an account? Log in</string>
    <string name="createaccount">Create Account</string>
    <string name="sun">Sun</string>
    <string name="sat">Sat</string>
    <string name="fri">Fri</string>
    <string name="thu">Thu</string>
    <string name="wed">Wed</string>
    <string name="tue">Tue</string>
    <string name="mon">Mon</string>
    <string name="weekly_workout_schedule">Weekly Workout Schedule</string>
    <string name="view_previous_workouts">View Previous Workouts</string>
    <string name="back">Back</string>
    <string name="trainhockey">TrainHockey</string>
    <string name="workout_history">Workout History</string>
    <string name="profile">Profile</string>
    <string name="hello_user">Hello, [user]</string>
    <string name="planned_workout">Planned workout for today: [Workout Name]</string>
    <string name="messages">No new messages.</string>
    <string name="personal_info">Personal Info</string>
    <string name="name_email">Name: \nEmail:</string>
    <string name="team">Team</string>
    <string name="logout">Logout</string>
    <string name="on_ice_training">On-Ice Training</string>
    <string name="enter_on_ice_training_details">Enter on-ice training details</string>
    <string name="off_ice_training">Off-Ice Training</string>
    <string name="enter_off_ice_training_details">Enter off-ice training details</string>
    <string name="save_workout">Save Workout</string>
    <string name="sets">Sets</string>
    <string name="reps">Reps</string>
    <string name="add_exercise">+ Add Exercise</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="description">Description</string>
    <string name="player">Player</string>
    <string name="coach">Coach</string>

    <string name="exercise_description">Exercise Description</string>
    <string name="save_exercise">Save Exercise</string>
    <string name="video_url">Video URL</string>
    <string name="pick_video">Pick Video</string>
    <string name="view_on_ice_exercises">View On-Ice Exercises</string>
    <string name="view_off_ice_exercises">View Off-Ice Exercises</string>
    <string name="add_new_exercis">➕ Add New Exercise</string>
    <string name="add_new_on_ice_exercise">➕ Add New On-Ice Exercise</string>
    <string name="select_on_ice_exercise">📋 Select On-Ice Exercise</string>
    <string name="add_new_off_ice_exercise">➕ Add New Off-Ice Exercise</string>
    <string name="select_off_ice_exercise">📋 Select Off-Ice Exercise</string>
    <string name="today_s_workout">Today\'s Workout</string>
    <string name="set_goal">Set Goal</string>

    <string name="select_role">Select Role:</string>
    <string name="set">Sets</string>
    <string name="rep">Reps</string>
    <string name="april">April</string>
    <string name="workout_editor">WORKOUT EDITOR</string>
    <string name="goal">No goal set</string>
    <string name="save_goal">Save Goal</string>
    <string name="edit_goal">Edit Goal</string>
    <string name="on_ice_exercises">On-Ice Exercises</string>
    <string name="off_ice_exercises">Off-Ice Exercises</string>
    <string name="week_range">Week Range</string>
    <string name="mark_complete">Mark Workout Complete</string>
    <string name="next_week">Next Week</string>
    <string name="previous_week">Previous Week</string>
    <string name="click_to_see_messages">Click to see messages</string>

</resources>