<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    android:background="@drawable/gradient">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="234dp"
        android:layout_height="236dp"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:paddingTop="1dp"
        android:src="@drawable/thlogo2" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textColorHint="@color/white"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:hint="@string/FirstName"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/lastnameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:hint="@string/LastName"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_role"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_gravity="left"
        android:layout_marginTop="10dp" />

    <RadioGroup
        android:id="@+id/userTypeRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/playerRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/player"
            app:buttonTint="@color/radio_color_selector"
            android:textColor="@color/white"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/coachRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:buttonTint="@color/radio_color_selector"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:text="@string/coach"/>
    </RadioGroup>




    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/already_have_an_account_log_in"
        android:textSize="16sp"
        android:textColorHint="@color/white"
        android:layout_gravity="center"
        android:paddingTop="16dp" />
    <!-- Sign Up Button -->
    <Button
        android:id="@+id/createButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CreateAccount"
        android:layout_marginTop="10dp"
        android:backgroundTint="@android:color/holo_blue_dark"/>/>
</LinearLayout>
</ScrollView>